--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     image: node:20.10.0
     ports:
       - 4001:3007
+    environment:
+      - PORT=4001
     volumes:
       - ./:/usr/src/sneakers
     working_dir: /usr/src/sneakers
@@ -23,6 +25,8 @@ services:
     image: node:20.10.0
     ports:
       - 4002:3008
+    environment:
+      - PORT=4002
     volumes:
       - ./:/usr/src/sneakers
     working_dir: /usr/src/sneakers
